--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,94 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner-container {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #010c0b),
+    url(https://images.unsplash.com/photo-1542751371-adc38448a05e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+  background-position: center;
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* text typing */
+.typing-demo {
+  width: 34ch;
+  animation: typing 5s steps(24), blink 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes typing {
   from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    width: 0;
   }
 }
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+@media screen and (max-width: 992px) {
+  .typing-demo {
+    font-size: 1.2em;
+  }
+}
+/* text typing end */
+
+.navbar-container {
+  top: 0;
+  background-color: #262b37;
+  position: sticky;
+  z-index: 2;
+}
+
+.about-container {
+  background-color: #00bdbd;
+}
+
+.education-container {
+  background-color: #eeeeee;
+}
+.bg-redtype {
+  background-color: #fb857f !important;
+}
+.bg-redtype:hover {
+  color: black !important;
+}
+.redtype-color {
+  color: #fb857f;
+}
+.circle {
+  background-color: #fb857f;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.project-container {
+  background-color: #2bb3dd;
+}
+
+.form-container {
+  background-color: #474d5d;
+}
+.inner-form {
+  background-color: #585f73;
+}
+.footer {
+  background-color: #2bb3dd;
+}
+.code {
+  font-family: monospace;
+  font-size: 1.5em;
+}
+.icon-circle {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: white;
+}
+/*  color: #2bb3dd; */
