--- a/src/components/section/project/project.css
+++ b/src/components/section/project/project.css
@@ -86,3 +86,10 @@
     width: 100%;
     }
   }
+
+  .body-project {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), #010c0b),
+    url(https://images.unsplash.com/photo-1542751371-adc38448a05e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+    background-position: center;
+    background-size: cover;
+}
